--- a/index.html
+++ b/index.html
@@ -13,42 +13,42 @@
 <a href="https://t.me/model143_bot">
     <div class="widget">
         <h2>Telegram bot 1</h2>
-        <p>😁</p>
+        <p>🤖</p>
     </div>
     </a>
 <a href="https://t.me/bscesc_bot">
     <div class="widget">
         <h2>Telegram bot 2</h2>
-        <p>😁</p>
+        <p>🤖</p>
     </div>
 </a>
 <a href="https://t.me/lokibooks77_bot">
     <div class="widget">
         <h2>Telegram bot 3</h2>
-        <p>😁</p>
+        <p>🤖</p>
     </div>
     </a>
 <a href="https://t.me/techcity11_bot">
     <div class="widget">
         <h2>Telegram bot 4</h2>
-        <p>😁</p>
+        <p>🤖</p>
     </div>
     </a>
 <a href="https://t.me/Lokimux_bot">
     <div class="widget">
         <h2>Telegram bot 5</h2>
-        <p>😁</p>
+        <p>🤖</p>
     </div>
     </a>
 <a href="https://t.me/Iptracker01_bot">
     <div class="widget">
         <h2>Telegram bot 6</h2>
-        <p>😁</p>
+        <p>🤖</p>
     </div>
     </a>
 
     <footer>
-        <p>Copyright Â© 2024 My Website</p>
+        <p>Copyright © 2024 My Website</p>
     </footer>
 </body>
 </html>
